Adding more steps