@@ -1,17 +1,23 @@
 # fin_banking_bb
 
 Digital Portal for Banking.
-The project can demonstrate the capability of deploying portal into local environment.
+The project can demonstrate the capability of deploying portal into Virtual environment.
 Backbase allows to develop widgets based portal.
 
 # Deployment Architecture
 
 
 
-Environment Requirements:
+#Prerequisites
+
+##Environment Requirements:
 
 1. install Virtual Box
 2. install Vagrant
-
-
-
+3. IntelliJ (https://confluence.jetbrains.com/display/IDEADEV/EAP)
+4. Java 1.7
+5. Maven 3.2.5 or higher
+6. Git
+###Environment variables
+JAVA_HOME pointing to Java 1.7
+MAVEN_OPTS -Xmx512m -XX:MaxPermSize=256m -XX:+UseConcMarkSweepGC
